--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
         "react": "^16.5.1",
         "react-dom": "^16.5.1",
         "react-intl": "^2.5.0",
-        "react-scripts": "1.1.4"
+        "react-scripts": "1.1.4",
+        "yarn": "^1.9.4"
     },
     "devDependencies": {
         "http-server": "^0.11.1",
