--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build-dev": "node scripts/buildDev.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "dependencies": {
@@ -58,7 +59,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
@@ -70,13 +71,13 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
+    "html-webpack-plugin": "^2.29.0",
     "ilib": "file:../ilib/dist/ilib.tgz",
-    "ilib-webpack-loader": "^1.0.2",
-    "ilib-webpack-plugin": "^1.0.2",
+    "ilib-webpack-loader": "file:../ilib-webpack-loader/ilib-webpack-loader-1.0.4.tgz",
+    "ilib-webpack-plugin": "file:../ilib-webpack-plugin/ilib-webpack-plugin-1.0.3.tgz",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -84,16 +85,17 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.5.1",
+    "react-async-component": "^2.0.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.5.1",
     "react-intl": "^2.5.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.9.4",
+    "webpack-manifest-plugin": "^1.3.2",
     "whatwg-fetch": "2.0.3",
     "yarn": "^1.9.4"
   },
