Added basic test Plural
This will be the framework for adding other tests

--- a/package.json
+++ b/package.json
@@ -60,12 +60,15 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
+    "babel-register": "^6.26.0",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -81,6 +84,7 @@
     "ilib-webpack-loader": "file:../ilib-webpack-loader/ilib-webpack-loader-1.0.4.tgz",
     "ilib-webpack-plugin": "file:../ilib-webpack-plugin/ilib-webpack-plugin-1.0.3.tgz",
     "jest": "20.0.4",
+    "jsdom": "^12.1.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
