Checkpoint. Add unit tests and address some code review comments

--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "^2.29.0",
     "ilib": "file:../ilib/dist/ilib.tgz",
-    "ilib-webpack-loader": "file:../ilib-webpack-loader/ilib-webpack-loader-1.0.4.tgz",
-    "ilib-webpack-plugin": "file:../ilib-webpack-plugin/ilib-webpack-plugin-1.0.3.tgz",
+    "ilib-webpack-loader": "^1.0.4",
+    "ilib-webpack-plugin": "^1.0.3",
     "jest": "20.0.4",
     "jsdom": "^12.1.0",
     "object-assign": "4.1.1",
