--- a/package.json
+++ b/package.json
@@ -34,25 +34,31 @@
     }
   ],
   "files": [
-    "src",
-    "README.md"
+    "src/components",
+    "src/utils",
+    "README.md",
+    "package.json",
+    "LICENSE"
   ],
   "repository": {
     "type": "git",
     "url": "git@github.com:iLib-js/react-ilib.git"
   },
   "engines": {
-    "ringojs": ">=0.9",
-    "nodejs": ">= 0.10"
+    "node": ">= 4.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "build-dev": "node scripts/buildDev.js",
-    "test": "node test/components/testSuite.js --env=jsdom"
+    "test": "node test/components/testSuite.js --env=jsdom",
+    "debug": "node --inspect-brk test/components/testSuite.js --env=jsdom",
+    "clean": "git clean -f -d src test public config build",
+    "dist": "npm run build ; npm pack"
   },
   "dependencies": {
-    "ilib-es6": "^1.0.0"
+    "ilib": "^14.1.1",
+    "ilib-es6": "^2.0.0"
   },
   "devDependencies": {
     "acorn": "^6.0.2",
@@ -83,8 +89,8 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "^2.29.0",
-    "ilib-webpack-loader": "^1.0.4",
-    "ilib-webpack-plugin": "^1.0.3",
+    "ilib-webpack-loader": "^1.2.1",
+    "ilib-webpack-plugin": "^1.2.1",
     "jest": "20.0.4",
     "jsdom": "^12.1.0",
     "object-assign": "4.1.1",
