--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "^2.29.0",
-    "ilib": "file:../ilib/dist/ilib.tgz",
+    "ilib": "^14.0.0",
     "ilib-webpack-loader": "^1.0.4",
     "ilib-webpack-plugin": "^1.0.3",
     "jest": "20.0.4",
