--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   },
   "dependencies": {
     "ilib": "^14.1.1",
-    "ilib-es6": "^2.0.0"
+    "ilib-es6": "^2.0.0",
+    "ndb": "^1.0.33"
   },
   "devDependencies": {
     "acorn": "^6.0.2",
