--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "0.6.2",
     "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.3",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-manifest-plugin": "^1.3.2",
     "whatwg-fetch": "2.0.3",
     "yarn": "^1.12.3"
