--- a/package.json
+++ b/package.json
@@ -63,18 +63,17 @@
     "message-accumulator": "^2.1.1"
   },
   "devDependencies": {
-    "ajv": "^6.9.1",
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-jsx": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "fs-extra": "3.0.1",
@@ -87,9 +86,9 @@
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.6.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "resolve": "1.6.0",
-    "url-loader": "0.6.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   },
@@ -125,11 +124,6 @@
       "jsx",
       "node",
       "mjs"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
     ]
   },
   "eslintConfig": {
