--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - "9"
   - "10"
 install:
+  - rm -rf node_modules
   - npm install
   - export PATH=$PWD/node_modules/.bin:$PATH
 script:
