--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "react-ilib",
   "version": "0.1.0",
   "main": "react-ilib.js",
+  "main": "./ilib.js",
+  "main-es6": "./ilib-es6.js",
   "description": "A set of React components that wrap iLib classes",
   "keywords": [
     "internationalization",
@@ -34,6 +36,8 @@
     }
   ],
   "files": [
+    "ilib.js.map",
+    "lib",
     "src/components",
     "src/utils",
     "README.md",
@@ -73,15 +77,13 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "autoprefixer": "^9.6.0",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^6.0.1",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-loader": "^2.1.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta",
+    "eslint-loader": "^2.2.1",
     "file-loader": "^4.0.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "^4.0.0-beta",
@@ -89,6 +91,7 @@
     "ilib-webpack-loader": "^1.3.0",
     "ilib-webpack-plugin": "^1.3.0",
     "jsdom": "^12.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "ndb": "^1.0.42",
     "nodeunit": "0.11.0",
     "object-assign": "4.1.1",
