--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-ilib",
   "version": "0.1.0",
-  "main": "./lib/index-es6.js",
-  "main-es6": "./src/index-es6.js",
+  "main": "./lib/index.js",
+  "main-es6": "./src/index.js",
   "description": "A set of React components that wrap iLib classes",
   "keywords": [
     "internationalization",
@@ -50,7 +50,9 @@
     "node": ">= 4.0"
   },
   "scripts": {
-    "build:lib": "babel src/components src/utils src/index-es6.js --out-dir lib --source-maps",
+    "build:lib": "npm run build:dev",
+    "build:prod": "grunt babel --mode=prod",
+    "build:dev": "grunt babel --mode=dev",
     "test": "node test/testSuite.js --env=jsdom",
     "debug": "node --inspect-brk test/testSuite.js --env=jsdom",
     "clean": "git clean -f -d src test public config build",
@@ -82,6 +84,13 @@
     "eslint-loader": "^2.2.1",
     "file-loader": "^4.0.0",
     "fs-extra": "3.0.1",
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-babel": "^8.0.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "load-grunt-tasks": "^5.0.0",
     "html-webpack-plugin": "^4.0.0-beta",
     "http-server": "^0.11.1",
     "ilib-webpack-loader": "^1.3.0",
