--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ilib": "^14.4.0",
     "ilib-es6": "^14.4.0",
     "ilib-tree-node": "^1.2.2",
+    "loctool": "^2.2.0",
     "message-accumulator": "^2.2.1"
   },
   "devDependencies": {
@@ -92,6 +93,8 @@
     "load-grunt-tasks": "^5.0.0",
     "html-webpack-plugin": "^4.0.0-beta",
     "http-server": "^0.11.1",
+    "ilib-loctool-javascript": "^1.0.1",
+    "ilib-loctool-jsx": "^1.1.1",
     "ilib-webpack-loader": "^1.3.0",
     "ilib-webpack-plugin": "^1.3.0",
     "jsdom": "^12.2.0",
